--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="hi.html">
+    <link rel="stylesheet" href="home.html">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="#about" aria-label="About Me">About Me</a></li>
                     <!-- Change the href to redirect to hello.html when clicked -->
-                    <li><a href="hello.html" aria-label="My Projects">Projects</a></li>
+                    <li><a href="project.html" aria-label="My Projects">Projects</a></li>
                     <li><a href="#contact" aria-label="Contact Me">Contact</a></li>
                 </ul>
             </nav>
