--- a/hi.html
+++ b/hi.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <h1>Roshan Adhikari</h1>
-            <p>Digital Marketer | To increase your brand Visibility</p>
+            <p>Digital Marketor | Increase your brand Visibility</p>
             <nav>
                 <ul>
                     <li><a href="#about" aria-label="About Me">About Me</a></li>
@@ -77,13 +77,19 @@
     <section id="contact" aria-labelledby="contact-title">
         <div class="container">
             <h2 id="contact-title">Contact Me</h2>
-            <p>Feel free to reach out to me at <a href="mailto:roshanadhikari640@gmail.com" aria-label="Send an email to Roshan">roshanadhikari640@gmail.com</a>.</p>
+          
             <div>
                 <a href="https://www.linkedin.com/in/roshan-adhikari-b92916327/" target="_blank" aria-label="Roshan Adhikari's LinkedIn Profile">
                     <img src="images/linkdin.png" alt="LinkedIn Icon" class="social-icon" style="width: 40px; height: 30px; margin-right: 10px;">
                 </a>
                 <a href="https://www.youtube.com/@beastgamingnp7783" target="_blank" aria-label="Roshan Adhikari's Youtube Channel">
                     <img src="images/youtube.png" alt="Youtube Icon" class="social-icon" style="width: 40px; height: 30px;">
+                </a>
+                <a href="https://github.com/Roshan98745" target="_blank" aria-label="Roshan Adhikari's Github">
+                    <img src="images/github.png" alt="github icon" class="social-icon" style="width: 40px; height: 30px;">
+                </a>
+                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" aria-label="Roshan Adhikari's Mail">
+                    <img src="images/mail.jpg" alt="Mail icon" class="social-icon" style="width: 40px; height: 30px;">
                 </a>
             </div>
         </div>
