new section added

--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="home.html">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="aboutme.html">
 </head>
 <body>
     <header>
@@ -14,7 +15,7 @@
             <p>Digital Marketer | Boosting brand visibility.</p>
             <nav>
                 <ul>
-                    <li><a href="#about" aria-label="About Me">About Me</a></li>
+                    <li><a href="aboutme.html" aria-label="About Me">About Me</a></li>
                     <!-- Change the href to redirect to hello.html when clicked -->
                     <li><a href="project.html" aria-label="My Projects">Projects</a></li>
                     <li><a href="#contact" aria-label="Contact Me">Contact</a></li>
