--- a/hi.html
+++ b/hi.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="hello.html">
+    <link rel="stylesheet" href="aboutme.html">
 </head>
 <body>
     <header>
@@ -16,7 +17,7 @@
             <p>Digital Marketor | Increase your brand Visibility</p>
             <nav>
                 <ul>
-                    <li><a href="#about" aria-label="About Me">About Me</a></li>
+                    <li><a href="aboutme.html" aria-label="About Me">About Me</a></li>
                     <!-- Change the href to redirect to hello.html when clicked -->
                     <li><a href="hello.html" aria-label="My Projects">Projects</a></li>
                     
