--- a/aboutme.html
+++ b/aboutme.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="home.html">
+        
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="aboutme.html">
+        <link rel="stylesheet" href="hello.html">
+        <link rel="stylesheet" href="hi.html">
     </head>
 <body>
     <header>
@@ -19,6 +21,7 @@
                     <!-- Change the href to redirect to hello.html when clicked -->
                     <li><a href="project.html" aria-label="My Projects">Projects</a></li>
                     <li><a href="#contact" aria-label="Contact Me">Contact</a></li>
+                    <li><a href="hi.html" aria-label="Contact Me">home</a></li>
                 </ul>
             </nav>
         </div>
