--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="home.html">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="aboutme.html">
+    <link rel="stylesheet" href="hi.html">
 </head>
 <body>
     <header>
@@ -19,6 +20,8 @@
                     <!-- Change the href to redirect to hello.html when clicked -->
                     <li><a href="project.html" aria-label="My Projects">Projects</a></li>
                     <li><a href="#contact" aria-label="Contact Me">Contact</a></li>
+                    <li><a href="#contact" aria-label="Contact Me">Contact</a></li>
+                    <li><a href="hi.html" aria-label="Contact Me">home</a></li>
                 </ul>
             </nav>
         </div>
