projects bug debugged

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,3 +1,5 @@
+
+<!--about me page -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -18,10 +20,11 @@
             <nav>
                 <ul>
                     <li><a href="aboutme.html" aria-label="About Me">About Me</a></li>
-                    <!-- Change the href to redirect to hello.html when clicked -->
-                    <li><a href="project.html" aria-label="My Projects">Projects</a></li>
+                    <li><a href="hello.html" aria-label="projects">projests</a></li> 
                     <li><a href="#contact" aria-label="Contact Me">Contact</a></li>
                     <li><a href="hi.html" aria-label="Contact Me">home</a></li>
+                 
+
                 </ul>
             </nav>
         </div>
