--- a/hi.html
+++ b/hi.html
@@ -1,3 +1,4 @@
+<!--home page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -89,8 +90,8 @@
                 <a href="https://github.com/Roshan98745" target="_blank" aria-label="Roshan Adhikari's Github">
                     <img src="images/github.png" alt="github icon" class="social-icon" style="width: 40px; height: 30px;">
                 </a>
-                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" aria-label="Roshan Adhikari's Mail">
-                    <img src="images/mail.jpg" alt="Mail icon" class="social-icon" style="width: 40px; height: 30px;">
+                <a href="mailto:roshan@example.com" target="_blank" aria-label="Send an email to Roshan Adhikari"><img src="images/mail.png" alt="Mail icon" class="social-icon" style="width: 40px; height: 30px;"></a>
+                    
                 </a>
             </div>
         </div>
