--- a/hello.html
+++ b/hello.html
@@ -1,3 +1,4 @@
+<!--project page-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +20,6 @@
                     <li><a href="aboutme.html" aria-label="About Me">About Me</a></li>
                     <!-- Change the href to redirect to hello.html when clicked -->
                     <li><a href="project.html" aria-label="My Projects">Projects</a></li>
-                    <li><a href="#contact" aria-label="Contact Me">Contact</a></li>
                     <li><a href="#contact" aria-label="Contact Me">Contact</a></li>
                     <li><a href="hi.html" aria-label="Contact Me">home</a></li>
                 </ul>
