--- a/hi.html
+++ b/hi.html
@@ -28,15 +28,18 @@
         </div>
     </header>
 
+    
     <!-- About Section -->
-    <section id="about" aria-labelledby="about-title">
-        <div class="container">
-            <h2 id="about-title">About Me</h2>
-            <img src="images/project2.jpg" alt="photo" class="project-img">
-            <p>Hi, I'm Roshan Adhikari, a passionate Digital Marketer committed to enhancing the visibility of your brand and driving impactful marketing strategies.</p>
-            <p style="text-align-last: right;">Roshan Adhikari</p>
-        </div>
-    </section>
+<section id="about" aria-labelledby="about-title">
+    <div class="container">
+        <h2 id="about-title">About Me</h2>
+        <!-- Corrected image tag with proper style attribute -->
+        <img src="images/roshan.jpeg" alt="photo" class="project-img" style="width:0px; height: 100px;">
+        <p>Hi, I'm Roshan Adhikari, a passionate Digital Marketer committed to enhancing the visibility of your brand and driving impactful marketing strategies.</p>
+        <p style="text-align-last: right;">Roshan Adhikari</p>
+    </div>
+</section>
+
 
    
     <!-- Projects Section -->
