home page mannaged

--- a/hi.html
+++ b/hi.html
@@ -34,12 +34,12 @@
     <div class="container">
         <h2 id="about-title">About Me</h2>
         <!-- Corrected image tag with proper style attribute -->
-        <img src="images/roshan.jpeg" alt="photo" class="project-img" style="width:0px; height: 100px;">
+        <img src="images/roshan.jpeg" alt="Roshan Adhikari" class="project-img" style="width: 150px; height: 150px;object-fit:contain;">
         <p>Hi, I'm Roshan Adhikari, a passionate Digital Marketer committed to enhancing the visibility of your brand and driving impactful marketing strategies.</p>
+        
         <p style="text-align-last: right;">Roshan Adhikari</p>
     </div>
 </section>
-
 
    
     <!-- Projects Section -->
@@ -75,8 +75,6 @@
 </section>
 
    
-
-    
 
     <!-- Contact Section -->
     <section id="contact" aria-labelledby="contact-title">
