aboutme section design from scratch

--- a/aboutme.html
+++ b/aboutme.html
@@ -27,15 +27,19 @@
             </nav>
         </div>
     </header>
-
- 
-   <!-- About Section -->
+   
 <section id="about" aria-labelledby="about-title">
+    <div class="circle-container">
+        <!-- Your circular image -->
+
+        <img src="images/roshan.jpeg" alt="Your Name" class="circle-img">
+    </div>
+    <!-- About Section -->
     <div class="container">
         <h2 id="about-title">About Me</h2>
         <div class="about-content">
             <div class="text-section">
-                <img src="images/roshan.jpeg" alt="Roshan Adhikari" class="project-img">
+                <img src="images/g" alt="Roshan Adhikari" class="project-img">
 
                 <p>Hi, I'm Roshan Adhikari, a passionate Digital Marketer committed to enhancing the visibility of your brand and driving impactful marketing strategies.</p>
                 <p style="text-align-last: right;">Roshan Adhikari</p>
@@ -48,9 +52,7 @@
     </div>
 </section>
 
-    <br>
-    <br>
-    <br>
+ 
     
  <!-- Contact Section -->
  <section id="contact" aria-labelledby="contact-title">
@@ -72,6 +74,7 @@
         </div>
     </div>
 </section>
+
 
 <!-- Footer Section -->
 <footer>
