--- a/hello.html
+++ b/hello.html
@@ -36,10 +36,10 @@
             <h2 id="my work">My Work</h2>
             <div class="screenshot-gallery">
                 <div class="screenshot-box" onclick="openImage('images/best web design and development 4th.png')">
-                    <img src="images/best web design and development 4th.png" alt="Screenshot 1" class="screenshot-img"style:="width:50px; height=5px; ">
+                    <img src="images/best web design and development 4th.png" alt="Screenshot 1" class="screenshot-img">
                 </div>
                 <div class="screenshot-box" onclick="openImage('images/food and beverage 1st.png')">
-                    <img src="images/food and beverage 1st.png" alt="Screenshot 2" class="screenshot-img">
+                    <img src="images/food and beverage 1st.png" alt="Screenshot 2" class="screenshot-img ">
                 </div>
                 <div class="screenshot-box" onclick="openImage('images/shopping cart 1st.png')">
                     <img src="images/shopping cart 1st.png" alt="Screenshot 3" class="screenshot-img">
