--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="home.html">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="hello.css">
     <link rel="stylesheet" href="aboutme.html">
     <link rel="stylesheet" href="hi.html">
 </head>
@@ -34,7 +34,7 @@
     <section id="screenshots" aria-labelledby="my work">
         <div class="container">
             <h2 id="my work">My Work</h2>
-            <div class="screenshot-gallery">
+            <div class="screenshot-gallery" style="display: flex;" >
                 <div class="screenshot-box" onclick="openImage('images/best web design and development 4th.png')">
                     <img src="images/best web design and development 4th.png" alt="Screenshot 1" class="screenshot-img">
                 </div>
