--- a/hello.html
+++ b/hello.html
@@ -41,8 +41,24 @@
                 <div class="screenshot-box" onclick="openImage('images/food and beverage 1st.png')">
                     <img src="images/food and beverage 1st.png" alt="Screenshot 2" class="screenshot-img ">
                 </div>
+                <div class="screenshot-box" onclick="openImage('images/food delivary app 2nd.png')">
+                    <img src="images/food delivary app 2nd.png" alt="Screenshot 3" class="screenshot-img">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="screenshots" aria-labelledby="my work">
+        <div class="container">
+            <h2 id="my work">My Work</h2>
+            <div class="screenshot-gallery" style="display: flex;" >
+                <div class="screenshot-box" onclick="openImage('images/property listing 6th.png')">
+                    <img src="images/property listing 6th.png" alt="Screenshot 1" class="screenshot-img">
+                </div>
                 <div class="screenshot-box" onclick="openImage('images/shopping cart 1st.png')">
-                    <img src="images/shopping cart 1st.png" alt="Screenshot 3" class="screenshot-img">
+                    <img src="images/shopping cart 1st.png" alt="Screenshot 2" class="screenshot-img ">
+                </div>
+                <div class="screenshot-box" onclick="openImage('images/school management 20th.png')">
+                    <img src="images/school management 20th.png" alt="Screenshot 3" class="screenshot-img">
                 </div>
             </div>
         </div>
