about me paragraph added

--- a/hello.html
+++ b/hello.html
@@ -34,6 +34,18 @@
         <div class="container">
             <br>
             <br>
+               <!-- About Section -->
+<section id="about me" aria-labelledby="about-title">
+    <div class="container">
+        <h2 id="about-title">About Me</h2>
+        <!-- Corrected image tag with proper style attribute -->
+
+        <p>Hi, I'm Roshan Adhikari, a passionate Digital Marketer committed to enhancing the visibility of your brand and driving impactful marketing strategies.</p>
+        
+        <p style="text-align-last: right;">Roshan Adhikari</p>
+    </div>
+</section>
+
             
             <div class="screenshot-gallery" style="display: flex;" >
                 <div class="screenshot-box" onclick="openImage('images/best web design and development 4th.png')">
