--- a/hi.html
+++ b/hi.html
@@ -91,7 +91,7 @@
                 <a href="https://github.com/Roshan98745" target="_blank" aria-label="Roshan Adhikari's Github">
                     <img src="images/github.png" alt="github icon" class="social-icon" style="width: 40px; height: 30px;">
                 </a>
-                <a href="mailto:roshan@example.com" target="_blank" aria-label="Send an email to Roshan Adhikari"><img src="images/mail.png" alt="Mail icon" class="social-icon" style="width: 40px; height: 30px;"></a>
+                <a href="mailto:roshanadhikari640@gmail.com" target="_blank" aria-label="Send an email to Roshan Adhikari"><img src="images/mail.png" alt="Mail icon" class="social-icon" style="width: 40px; height: 30px;"></a>
                     
                 </a>
             </div>
