--- a/hi.html
+++ b/hi.html
@@ -52,7 +52,7 @@
             <div class="project-card">
                 <picture>
                     <source srcset="images/project1-small.jpg" media="(max-width: 768px)">
-                   
+                </picture> 
                 <h3>Project 1: Digital Marketing Strategy</h3>
                 <p>This project involved creating a comprehensive SEO strategy for a local business, helping increase their online presence and sales.</p>
             </div>
