--- a/hello.html
+++ b/hello.html
@@ -20,7 +20,7 @@
                     <li><a href="aboutme.html" aria-label="About Me">About Me</a></li>
                     <!-- Change the href to redirect to hello.html when clicked -->
                     <li><a href="#contact" aria-label="Contact Me">Contact</a></li>
-                    <li><a href="hi.html" aria-label="Contact Me">home</a></li>
+                    <li><a href="hi.html" aria-label="Contact Me">Home</a></li>
                 </ul>
             </nav>
         </div>
